--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "NODE_OPTIONS=--openssl-legacy-provider node app.js",
     "build": "browserify -r jquery > public/js/bundle.js",
     "cleanup": "mongo express-todo --eval 'db.todos.remove({});'",
-    "test": "snyk test"
+    "test": "snyk test",
+    "coverage": "jest --coverage"
   },
   "dependencies": {
     "adm-zip": "0.4.7",
