--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,12 @@
+# sonar-project.properties
 sonar.projectKey=trungquantrannguyen_8.2CDevSecOps
 sonar.organization=trungquantrannguyen
 sonar.host.url=https://sonarcloud.io
-sonar.login=${1e0f3282a1ee4cb24c8b43ad9bb95e6e3cd2ac59}
+sonar.login=${SONAR_TOKEN}
+
 sonar.sources=.
+sonar.exclusions=node_modules/**,test/**
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
+
+sonar.projectName=NodeJS Goof Vulnerable App
+sonar.sourceEncoding=UTF-8
