--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "browserify": "^13.1.1",
+    "jest": "^29.7.0",
     "nodemon": "^2.0.7",
     "snyk": "^1.244.0"
   },
