--- a/package.json
+++ b/package.json
@@ -52,8 +52,7 @@
   "devDependencies": {
     "browserify": "^13.1.1",
     "jest": "^29.7.0",
-    "nodemon": "^2.0.7",
-    "snyk": "^1.244.0"
+    "nodemon": "^2.0.7"
   },
   "license": "Apache-2.0"
 }
