--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
   },
   "devDependencies": {
     "browserify": "^13.1.1",
-    "jest": "^29.7.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "snyk": "^1.244.0"
   },
   "license": "Apache-2.0"
 }
